# Rust_Rocket_Yew_Tutorial

./: README.md
devcontainer/: .Dockerfile.swp  Dockerfile  README.md  docker-compose.yml
part1/: Cargo.toml  README.md
part1/backend/: Cargo.toml  Rocket.toml  build.rs
part1/backend/src/: main.rs
part1/ui/: Cargo.toml  index.html
part1/ui/src/: main.rs
part2/: Cargo.toml  README.md
part2/backend/: Cargo.toml  Rocket.toml
part2/common/: Cargo.toml
part2/common/src/: lib.rs
part2/ui/: Cargo.toml
part2/ui/src/: main.rs
part2/ui/src/components/: markup.rs
part2/ui/src/pages/: home.rs  not_found.rs
part2/ui/src/utils/: mod.rs
part3/: README.md
part3/backend/data/markup/: homepage.md
part3/backend/src/: main.rs
part3/common/src/: .lib.rs.swp
part3/ui/: index.html
part3/ui/src/: .app.rs.swp  app.rs  main.rs
part3/ui/src/components/: markup.rs  mod.rs
part3/ui/src/pages/: home.rs
part3/ui/src/utils/: fetchstates.rs
